--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
   </div>
   <div class="add-members-container">
     <input #addMemberInput type="text" placeholder="Name" 
-    (input)="onInput(addMemberInput.value)"/>
+    (input)="onInput(addMemberInput.value)"
+   [value]="newMemberName"
+    />
     <button (click)="addMember()">
       Add
     </button>
@@ -24,5 +26,9 @@
       Generate
     </button>
   </div>
+  <!-- again *ngif is the structural directive -->
+  <p *ngIf="errorMessage">
+    {{errorMessage}}
+  </p>
 
 </div>
